# tau

./: .clang-format  .gitignore  CMakeLists.txt  README.md  common.h  lexer.c  lexer.h  lexer_test.c  log.c  log.h  parser.c  parser.h  parser_alloc.h  parser_expr_test.c  parser_internals.h  parser_match.c  parser_match.h  parser_stmt_decl_test.c  parser_stmt_test.c  parser_test.c  parser_test_utils.h  ptr_stack.c  ptr_stack.h  ptr_stack_test.c  test_dummy.c  utf8.c  utf8.h  utf8_test.c
.github/workflows/: build-and-test.yml
cmake/: FetchCMocka.cmake  TestMacros.cmake
misc/: syntax_ebnf.txt
tau-build/: CMakeLists.txt
tau-build/include/tau/: parser.h
tau-build/src/: common.h  lexer.c  lexer.h  log.c  log.h  parser.c  parser_internal.c  parser_internal.h  parser_match.c  parser_match.h  uc_names.h  utf8.h
tau-build/test/: lexer_test.c  parser_decl_test.c  parser_expr_test.c  parser_stmt_test.c  parser_test.c  topology_helper.h  utf8_test.c
